fix(no-changelog): google index improvements

--- a/packages/ignition/src/app/locales/docs/getting-started/components/contributing.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/contributing.en.mdx
@@ -19,3 +19,6 @@ Here is how you can contribute to the project:
 ### Issue Reporting
 
 If you find a bug or have a feature request, please report it on the <IoLogoGithub className='-mt-1' /> [issues page](https://github.com/rocketclimb/rocketicons/issues).
+
+<br />
+Now that you have a basic understanding of how to use rocketicons, check out our [Usage Guide](/docs/usage) to learn more about how to use it in your project.
