--- a/packages/ignition/src/app/locales/docs/getting-started/components/contributing.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/contributing.pt-br.mdx
@@ -19,3 +19,6 @@ Aqui está como você pode contribuir para o projeto:
 ### Relatório de Problemas
 
 Se você encontrar um bug ou tiver um pedido de recurso, por favor, reporte-o na página de <IoLogoGithub className='-mt-1' /> [issues](https://github.com/rocketclimb/rocketicons/issues) no GitHub.
+
+<br />
+Agora que você tem uma compreensão básica de como usar rocketicons, confira nosso [Guia de Uso](/docs/uso) para aprender mais sobre como usar em seu projeto.
