--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-customizing.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-customizing.en.mdx
@@ -7,4 +7,4 @@ order: 5
 activeSelector: group-has-[.docs-sizing-icons]:active-content
 ---
 
-Learn more about customizing the default theme size in the [theme customization documentation](/docs/getting-started#customization).
+Learn more about customizing the default theme size in the [theme customization documentation](/en/docs/getting-started#customization).
