--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-customizing.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-customizing.pt-br.mdx
@@ -7,4 +7,4 @@ order: 5
 activeSelector: group-has-[.docs-sizing-icons]:active-content
 ---
 
-Aprenda como customizar o tema padrão na [documentação de customização do tema](/docs/getting-started#customization).
+Aprenda como customizar o tema padrão na [documentação de customização do tema](/pt-br/docs/primeiros-passos#customizacao).
