--- a/packages/ignition/src/app/locales/pt-br.json
+++ b/packages/ignition/src/app/locales/pt-br.json
@@ -23,6 +23,7 @@
     "usage": "Usando",
     "usage-slug": "usando",
     "icons": "Icones",
+    "icons-slug": "icones",
     "roadmap": "Roadmap"
   },
   "roadmap": {
