--- a/packages/ignition/src/app/locales/en.json
+++ b/packages/ignition/src/app/locales/en.json
@@ -23,6 +23,7 @@
     "usage": "Usage",
     "usage-slug": "usage",
     "icons": "Icons",
+    "icons-slug": "icons",
     "roadmap": "Roadmap"
   },
   "roadmap": {
