feat: basic playground

--- a/packages/ignition/src/app/locales/en.json
+++ b/packages/ignition/src/app/locales/en.json
@@ -23,7 +23,8 @@
     "usage": "Usage",
     "usage-slug": "usage",
     "icons": "Icons",
-    "roadmap": "Roadmap"
+    "roadmap": "Roadmap",
+    "try-it": "Try it!"
   },
   "roadmap": {
     "released": "Released",
