--- a/packages/ignition/src/app/locales/pt-br.json
+++ b/packages/ignition/src/app/locales/pt-br.json
@@ -23,7 +23,8 @@
     "usage": "Usando",
     "usage-slug": "usando",
     "icons": "Icones",
-    "roadmap": "Roadmap"
+    "roadmap": "Roadmap",
+    "try-it": "Experimente!"
   },
   "roadmap": {
     "released": "Lançado",
