fix(no-changelog): update locales

--- a/packages/ignition/src/app/locales/components/icons/icon-info-colors.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-colors.en.mdx
@@ -4,4 +4,6 @@ description: import
 slug: icon-info-colors
 ---
 
+Use the colors utilities to colorize the icons.
+
 Use the colors utilities to colorize the icons. See Tailwind [colors section](https://tailwindcss.com/docs/customizing-colors) to learn more about it.
