--- a/packages/ignition/src/app/locales/components/icons/icon-info-colors.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-colors.pt-br.mdx
@@ -4,4 +4,6 @@ description: import
 slug: icon-info-colors
 ---
 
-Use os utilitários de colores para escolher as cores dos ícones. Veja a [documentação de cores](https://tailwindcss.com/docs/customizing-colors) do Tailwind para saber mais.
+Utilitários de cores.
+
+Utilitários de cores. Use para escolher as cores dos ícones. Veja a [documentação de cores](https://tailwindcss.com/docs/customizing-colors) do Tailwind para saber mais.
