--- a/packages/ignition/src/app/locales/components/icons/icon-info-states.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-states.pt-br.mdx
@@ -4,5 +4,7 @@ description: import
 slug: icon-info-states
 ---
 
-Hover, Focus, and Outros estados tem total funcionalidade na web, porém o suporte do NativeWind ainda não é completo e algumas limitações podem ser encontradas como descrito na [documentação oficial](https://www.nativewind.dev/core-concepts/states).
-Temos uma [seção dedicada aos estados](/docs/state-management) a isso em nossa documentação.
+Hover, Focus, and Outros estados.
+
+Hover, Focus, and Outros estados tem total suporte na web, porém NativeWind tem algumas limitações, descritas na [documentação oficial](https://www.nativewind.dev/core-concepts/states).
+Saiba mais [sobre estados](/docs/state-management).
