--- a/packages/ignition/src/app/locales/components/icons/icon-info-styling.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-styling.pt-br.mdx
@@ -6,4 +6,6 @@ slug: icon-info-styling
 
 #### Estilizando
 
-Use os utilitários `icons-*` para te auxiliar na estilização do componente. Combinando com tudo o que o [Tailwind](https://tailwindcss.com/docs/installation) oferece, você deve ser capaz de chegar praticamente a qualquer resultado.
+Use utilitários `icons-*` estilizando componentes.
+
+Combinando com tudo o que o [Tailwind](https://tailwindcss.com/docs/installation) oferece, você deve chegar praticamente a qualquer resultado.
