--- a/packages/ignition/src/app/locales/components/icons/icons-hero.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icons-hero.en.mdx
@@ -4,8 +4,10 @@ description: Discover how to easily incorporate popular icons into your React an
 slug: icons-hero
 ---
 
+import RocketIconsText, { RocketIconsTextDefault } from "@/components/rocketicons-text";
+
 # Icons on React or React-Native, easily in a cross-platform solution
 
-Discover how to easily incorporate popular icons into your React and React-Native projects, using rocketicons, a non official Tailwind Plugin,
+Discover how to easily incorporate popular icons into your React and React-Native projects, using <RocketIconsTextDefault showIcon={false} />, a non official Tailwind Plugin,
 that enables code sharing between web and native applications, providing a cross-platform solution.
 
