--- a/packages/ignition/src/app/locales/components/icons/icons-hero.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icons-hero.pt-br.mdx
@@ -4,7 +4,9 @@ description: Descubra como incorporar facilmente ícones populares em seus proje
 slug: icons-hero
 ---
 
+import RocketIconsText, { RocketIconsTextDefault } from "@/components/rocketicons-text";
+
 # Ícones para React e React-Native, fácil em uma solução cross-platform
 
-Descubra como incorporar facilmente ícones populares em seus projetos React e React-Native, utilizando o RocketIcons,  
+Descubra como incorporar facilmente ícones populares em seus projetos React e React-Native, utilizando o <RocketIconsTextDefault showIcon={false} />,
 um plugin não oficial do Tailwind, permitindo o compartilhamento de código entre aplicações web e nativas, fornecendo uma solução multiplataforma.
