--- a/packages/ignition/src/app/locales/docs/getting-started/components/configuration.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/configuration.pt-br.mdx
@@ -15,7 +15,7 @@ Você precisa ter o tailwind em seu projeto e, é claro, o arquivo `tailwind.con
 
 Nesse arquivo, importe o plugin e adicione-o ao array `plugins` assim:
 
-```js
+```js filename="tailwind.config.js"
 // tailwind.config.js
 import icons from "rocketicons/tailwind";
 
