--- a/packages/ignition/src/app/locales/docs/getting-started/getting-started.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/getting-started.en.mdx
@@ -27,15 +27,14 @@ for styling, making it easy to customize and integrate into your applications.
 
 <RocketIconsTextDefault /> was created to provide a simple and easy-to-use icon library for
 developers who wish to write a single code that can work both in **React** web and **React
-Native**.
+Native**. 
 
 We were motivated by the existence of great
-tools such as
-
-<SiTailwindcss className="-mt-1" /> [Tailwind CSS](https://tailwindcss.com/),
+tools such as <SiTailwindcss className="-mt-1" /> [Tailwind CSS](https://tailwindcss.com/),
 <SiExpo className="-mt-1" /> [Expo](https://expo.dev/),
 <SiReact className="-mt-1 icon-sky-500" /> [NativeWind](https://nativewind.dev) and
-<SiReact className="-mt-1 icon-red-800" /> [React Icons](https://react-icons.github.io/react-icons/).
+<SiReact className="-mt-1 icon-red-800" /> [React Icons](https://react-icons.github.io/react-icons/). 
+
 These tools are great and we love them but we wanted to create an even easier experience for developers
 working with multiple platforms with the same codebase.
 
