--- a/packages/ignition/src/app/locales/docs/usage/components/adding-icons-next.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/adding-icons-next.en.mdx
@@ -19,5 +19,9 @@ of this tool.
 <br />
 You can find a few links to help you out on this task below:
 <br />
-[Colors](./colors) [Dark mode](./dark-mode) [Responsive Design](./responsive-design) [Sizing icons](./sizing-icons)
-[Hover, Focus e Other States](./state-management) [Styling](./styling)
+[Colors](./colors)  
+[Dark mode](./dark-mode)  
+[Responsive Design](./responsive-design)  
+[Sizing icons](./sizing-icons)  
+[Hover, Focus e Other States](./state-management)  
+[Styling](./styling)
