--- a/packages/ignition/src/app/locales/docs/usage/components/adding-icons-next.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/adding-icons-next.pt-br.mdx
@@ -19,5 +19,9 @@ dessa ferramenta.
 <br />
 Então seguem alguns links que podem te ajudar nessa tarefa:
 <br />
-[Cores](./cores) [Modo Escuro](./modo-escuro) [Design Responsivo](./design-responsivo) [Dimensionando
-Ícones](./dimensionando-icones) [Hover, Focus e Outros Estados](./estados) [Estilização](./estilizando)
+[Cores](./cores)  
+[Modo Escuro](./modo-escuro)  
+[Design Responsivo](./design-responsivo)  
+[Dimensionando Ícones](./dimensionando-icones)  
+[Hover, Focus e Outros Estados](./estados)  
+[Estilização](./estilizando)
