--- a/packages/ignition/src/app/locales/en.json
+++ b/packages/ignition/src/app/locales/en.json
@@ -42,6 +42,7 @@
   "states": "States",
   "show-all": "Show all icons",
   "icon": "icon",
+  "learn-more": "Learn more",
   "table": {
     "headers": ["Class", "Properties"],
     "show-all": "show all",
