--- a/packages/ignition/src/app/locales/components/home/home.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/home/home.pt-br.mdx
@@ -4,5 +4,5 @@ description: A biblioteca de ícones para o seu projeto React ou React Native, w
 slug: home
 ---
 
-    <h1 className="text-slate-900 font-extrabold text-3xl sm:text-4xl md:text-5xl lg:text-6xl tracking-tight text-center dark:text-white">Ícones do seu jeito e como você precisa. Na Web ou no Mobile.</h1>
-    <p className="mt-6 text-md px-3 md:text-lg text-slate-600 text-center max-w-3xl mx-auto dark:text-slate-400">A biblioteca de ícones que você estava procurando. Funciona em React e em React Native, sem mudanças. Apenas um código, que roda onde você precisa. E com todo o poder que você já conheçe do <a className="text-sky-500" href="https://tailwindcss.com">Tailwind</a>.</p>
+# Ícones do seu jeito e como você precisa. Na Web ou no Mobile.
+A biblioteca de ícones que você estava procurando. Funciona em React e em React Native, sem mudanças. Apenas um código, que roda onde você precisa. E com todo o poder que você já conheçe do <a className="text-sky-500" href="https://tailwindcss.com">Tailwind</a>.
