--- a/packages/ignition/src/app/locales/components/icons/icon-info-sizing.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-sizing.en.mdx
@@ -4,4 +4,6 @@ description: import
 slug: icon-info-sizing
 ---
 
+Utilities for setting icons size.  
+
 Utilities for setting icons size. It can be [customized](/docs/getting-started#configuration) or added as your need. Tailwind utilities like [size](https://tailwindcss.com/docs/size), [height](https://tailwindcss.com/docs/height) and [width](https://tailwindcss.com/docs/width) can be used as well.
