--- a/packages/ignition/src/app/locales/components/icons/icon-info-states.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-states.en.mdx
@@ -4,5 +4,7 @@ description: import
 slug: icon-info-states
 ---
 
+Hover, Focus, and and Other States.
+
 Hover, Focus, and and Other States has total power on web, however the NativeWind support is not complete and there are few limitations as described on the [official documentation](https://www.nativewind.dev/core-concepts/states).
-There is also a [dedicated state section](/docs/state-management) on the documentation.
+Learn more [about states](/docs/state-management).
