--- a/packages/ignition/src/app/locales/docs/getting-started/components/configuration.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/configuration.en.mdx
@@ -14,7 +14,7 @@ In order to use <RocketIconsTextDefault /> in your projects, you need to have a 
 You need to have tailwind on your project and, of course, the `tailwind.config.js` file.
 On that file, import the plugin and add it to the `plugins` array like this:
 
-```js
+```js filename=tailwind.config.js
 // tailwind.config.js
 import icons from "rocketicons/tailwind";
 
