fix(no-changelog): move playground into sidebar

--- a/packages/ignition/src/app/locales/en.json
+++ b/packages/ignition/src/app/locales/en.json
@@ -23,8 +23,7 @@
     "usage": "Usage",
     "usage-slug": "usage",
     "icons": "Icons",
-    "roadmap": "Roadmap",
-    "try-it": "Try it!"
+    "roadmap": "Roadmap"
   },
   "roadmap": {
     "released": "Released",
