--- a/packages/ignition/src/app/locales/pt-br.json
+++ b/packages/ignition/src/app/locales/pt-br.json
@@ -23,8 +23,7 @@
     "usage": "Usando",
     "usage-slug": "usando",
     "icons": "Icones",
-    "roadmap": "Roadmap",
-    "try-it": "Experimente!"
+    "roadmap": "Roadmap"
   },
   "roadmap": {
     "released": "Lançado",
