chore(no-changelog): update usage texts

--- a/packages/ignition/src/app/locales/components/icons/icon-info-colors.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-colors.pt-br.mdx
@@ -4,6 +4,6 @@ description: import
 slug: icon-info-colors
 ---
 
-Utilitários de cores.
+##### Cores
 
-Utilitários de cores. Use para escolher as cores dos ícones. Veja a [documentação de cores](https://tailwindcss.com/docs/customizing-colors) do Tailwind para saber mais.
+Use para escolher as cores dos ícones. Veja a [documentação de cores](https://tailwindcss.com/docs/customizing-colors) do Tailwind para saber mais.
