--- a/packages/ignition/src/app/locales/components/icons/icon-info-combining.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-combining.en.mdx
@@ -4,6 +4,6 @@ description: import
 slug: icon-info-combining
 ---
 
-Combine the icons utilities.
+##### Shortcuts
 
-Combine the icons utilities changing the colors and the size on the same time. Use on the format `icon-{color}-{size}`. Just one utilitied should be applied at once.
+Combine the icons utilities changing the colors and the size on the same time. Use on the format `icon-{color}-{size}`.
