--- a/packages/ignition/src/app/locales/components/icons/icon-info-combining.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-combining.pt-br.mdx
@@ -4,6 +4,6 @@ description: import
 slug: icon-info-combining
 ---
 
-Os utilitários de ícones podem ser combinados.
+##### Atalhos
 
-Utilitários podem ser combinados alterando o tamanho e a cor do ícone ao mesmo tempo. Use no formato `icon-{cor}-{tamanho}`. Apenas um utilário deve ser aplicado por vez.
+Utilitários podem ser combinados alterando o tamanho e a cor do ícone ao mesmo tempo. Use no formato `icon-{cor}-{tamanho}`.
