--- a/packages/ignition/src/app/locales/components/icons/icon-info-dark.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-dark.en.mdx
@@ -4,6 +4,6 @@ description: import
 slug: icon-info-dark
 ---
 
-Powered by Tailwind (by NativeWind on Native).
+##### Dark mode
 
-Powered by Tailwind (by NativeWind on React-native), the dark mode variante can be used defined a different appearance when dark mode is enabled.
+Powered by Tailwind (by NativeWind on React-native), the dark mode variant can be used defined a different appearance when dark mode is enabled.
