--- a/packages/ignition/src/app/locales/components/icons/icon-info-states.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-states.pt-br.mdx
@@ -4,7 +4,7 @@ description: import
 slug: icon-info-states
 ---
 
-Hover, Focus, and Outros estados.
+##### Hover, Focus, and Outros estados
 
-Hover, Focus, and Outros estados tem total suporte na web, porém NativeWind tem algumas limitações, descritas na [documentação oficial](https://www.nativewind.dev/core-concepts/states).
+O suporte na web e total, porém NativeWind tem algumas limitações, descritas na [documentação oficial](https://www.nativewind.dev/core-concepts/states).
 Saiba mais [sobre estados](/docs/state-management).
