--- a/packages/ignition/src/app/locales/components/icons/icon-info-styling.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-styling.en.mdx
@@ -6,6 +6,5 @@ slug: icon-info-styling
 
 #### Styling
 
-Use the utilities `icons-*` styling the component.
-
-Combining with the power of [Tailwind](https://tailwindcss.com/docs/installation), you should be able achiving any result your project requires.
+Beside the `icons-*` utilities, all the [Tailwind](https://tailwindcss.com/docs/installation) power
+is at your service, allowing to achive any result your project requires.
