--- a/packages/ignition/src/app/locales/components/icons/icon-info-styling.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-styling.pt-br.mdx
@@ -4,8 +4,7 @@ description: import
 slug: icon-info-styling
 ---
 
-#### Estilizando
+#### Mais estilos 
 
-Use utilitários `icons-*` estilizando componentes.
-
-Combinando com tudo o que o [Tailwind](https://tailwindcss.com/docs/installation) oferece, você deve chegar praticamente a qualquer resultado.
+Além do utilitários `icons-*`, você tem disponível tudo o que o [Tailwind](https://tailwindcss.com/docs/installation) oferece,
+permitindo que você chegue a praticamente qualquer resultado.
