--- a/packages/ignition/src/app/locales/docs/usage/components/styling-animate.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-animate.en.mdx
@@ -10,5 +10,6 @@ order: 5
 
 Animations and transitions can be used with icons,
 but this functionality is only available for React.
+Custom animations can be created, learn how on [Tailwind documentation](https://tailwindcss.com/docs/animation#customizing-your-theme).
 
 **React Native has some limited features**. _See the official documentation of [NativeWind](https://www.nativewind.dev/core-concepts/states) for more information._
