--- a/packages/ignition/src/app/locales/docs/usage/components/styling-animate.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-animate.pt-br.mdx
@@ -10,5 +10,6 @@ order: 5
 
 Animações e transições podem ser usadas com os ícones,
 porem essa funcionalidade está apenas disponível para React.
+Você pode criar suas próprias animações, veja como na [documentação do Tailwind](https://tailwindcss.com/docs/animation#customizing-your-theme).
 
 **React Native tem algumas funcionalidades limitadas**. _Veja a documentação oficial do [NativeWind](https://www.nativewind.dev/core-concepts/states) para saber mais._
