--- a/packages/ignition/src/app/locales/components/icons/icon-info-dark.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-dark.pt-br.mdx
@@ -4,6 +4,6 @@ description: import
 slug: icon-info-dark
 ---
 
-Usando Tailwind (e NativeWind no Native).
+##### Modo escuro
 
-Usando Tailwind (e NativeWind no React-native), a variante de modo escuro pode ser utilizada para definir uma aparencia diferente quando esse modo estiver ativado.
+Usando Tailwind (e NativeWind no React-native), a variante de modo escuro pode ser utilizada para definir uma aparência diferente quando esse modo estiver ativado.
