--- a/packages/ignition/src/app/locales/components/icons/icon-info-sizing.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icon-info-sizing.pt-br.mdx
@@ -4,6 +4,6 @@ description: import
 slug: icon-info-sizing
 ---
 
-Utilitários de tamanho dos ícones.  
+##### Tamanhos
 
-Utilitários de tamanho dos ícones. Eles podem ser [alterados](/docs/getting-started#configuration) ou criados conforme sua necessidade. Utilitários Tailwind como [tamanho](https://tailwindcss.com/docs/size), [altura](https://tailwindcss.com/docs/height) e [largura](https://tailwindcss.com/docs/width) também estão disponíveis.
+Eles podem ser [alterados](/docs/getting-started#configuration) ou criados conforme sua necessidade. Utilitários Tailwind como [tamanho](https://tailwindcss.com/docs/size), [altura](https://tailwindcss.com/docs/height) e [largura](https://tailwindcss.com/docs/width) também estão disponíveis.
