fix(no-changelog): fix PR and Sonar issues

--- a/packages/ignition/src/app/locales/docs/usage/shortcuts.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/shortcuts.en.mdx
@@ -5,12 +5,8 @@ slug: shortcuts
 order: 9
 ---
 
-import RocketIconsText, { RocketIconsTextDefault } from "@/components/rocketicons-text";
-
 ## Usage
 
 # What is shortcuts?
 
-Using <RocketIconsText /> to style icons on dark mode.
-
-You can style icons differently when dark mode is enabled.
+Shortcuts are a combination of color and size utilities that allow you to change both properties at once.
